--- a/config.json
+++ b/config.json
@@ -1,28 +1,13 @@
 {
   "broker": {
     "address": "broker01",
-    "repositoryFolder": "~/optimalframework/broker_repositories",
-    "pluginFolder": "~/optimalframework/plugins",
+    "pluginFolder": "~/develop/of/config/plugins",
     "database": {
-      "databaseName": "test_broker"
+      "databaseName": "test_of"
     },
     "logging": {
       "severityLevel": "debug",
       "databaseLevel": "information"
-    }
-  },
-  "agent": {
-    "address": "agent01",
-    "repositoryFolder": "~/optimalframework/agent_repositories",
-    "pluginFolder": "~/optimalframework/plugins",
-    "brokerUrl": "127.0.0.1:8080",
-    "verifySSL": false,
-    "username": "tester",
-    "password": "test",
-    "connectionRetries": "2",
-    "logging": {
-      "severityLevel": "information",
-      "brokerLevel": "information"
     }
   }
 }
