Move admin API tests out of broker Add support for manually specifying plugin package top level name Make plugin initiation more robust

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "broker": {
     "address": "broker01",
-    "pluginFolder": "~/develop/of/config/plugins",
+    "pluginFolder": "~/of/plugins",
     "database": {
       "databaseName": "test_of"
     },
