--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "broker": {
     "address": "broker01",
-    "pluginFolder": "~/of/plugins",
+    "pluginFolder": "./plugins",
     "database": {
       "databaseName": "test_of"
     },
